Solved two bugs, removed white spaces #2 #3

--- a/css/style.css
+++ b/css/style.css
@@ -436,8 +436,6 @@ diagram {
 }
 
 .textInfoElements {
-  flex: 1 1 200px;
-  padding: 20px;
   max-width: 600px;
 }
 
